--- a/paper.bib
+++ b/paper.bib
@@ -18,7 +18,6 @@
 	file = {Full Text PDF:/home/ofilangi/Zotero/storage/KHSPG3FC/Paulhe et al. - 2022 - PeakForest a multi-platform digital infrastructur.pdf:application/pdf},
 }
 
-
 @article{wu_semantic_2014,
 	title = {Semantic Web technologies for the big data in life sciences},
 	volume = {8},
@@ -55,64 +54,80 @@
 	file = {Full Text PDF:/home/ofilangi/Zotero/storage/XGZDK357/Delmas et al. - 2021 - FORUM building a Knowledge Graph from public data.pdf:application/pdf;Snapshot:/home/ofilangi/Zotero/storage/VEFPVVGC/6363786.html:text/html},
 }
 
-
-
-@article{Pearson:2017,
-  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
-  	Archiveprefix = {arXiv},
-  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
-  	Eprint = {1703.04627},
-  	Journal = {ArXiv e-prints},
-  	Keywords = {Astrophysics - Astrophysics of Galaxies},
-  	Month = mar,
-  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
-  	Year = 2017
+@article{BFO:2022,
+author = {Otte, J. Neil and Beverley, John and Ruttenberg, Alan and Borgo, Stefano and Galton, Antony and Kutz, Oliver},
+title = {BFO: Basic Formal Ontology1},
+year = {2022},
+issue_date = {2022},
+publisher = {IOS Press},
+address = {NLD},
+volume = {17},
+number = {1},
+issn = {1570-5838},
+url = {https://doi.org/10.3233/AO-220262},
+doi = {10.3233/AO-220262},
+abstract = {Basic Formal Ontology (BFO) is a top-level ontology consisting of thirty-six classes, designed to support information integration, retrieval, and analysis across all domains of scientific investigation, presently employed in over 350 ontology projects around the world. BFO is a genuine top-level ontology, containing no terms particular to material domains, such as physics, medicine, or psychology. In this paper, we demonstrate how a series of cases illustrating common types of change may be represented by universals, defined classes, and relations employing the BFO framework. We provide discussion of these cases to provide a template for other ontologists using BFO, as well as to facilitate comparison with the strategies proposed by ontologists using different top-level ontologies.},
+journal = {Appl. Ontol.},
+month = {jan},
+pages = {17–43},
+numpages = {27},
+keywords = {BFO, top-level ontology, ontological analysis, formal ontology}
 }
 
-@book{Binney:2008,
-  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
-  	Author = {{Binney}, J. and {Tremaine}, S.},
-  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
-  	Publisher = {Princeton University Press},
-  	Title = {{Galactic Dynamics: Second Edition}},
-  	Year = 2008
+  
+@article{OBO:2021,
+  author = {Jackson, Rebecca and Matentzoglu, Nicolas and Overton, James A and Vita, Randi and Balhoff, James P and Buttigieg, Pier Luigi and Carbon, Seth and Courtot, Melanie and Diehl, Alexander D and Dooley, Damion M and Duncan, William D and Harris, Nomi L and Haendel, Melissa A and Lewis, Suzanna E and Natale, Darren A and Osumi-Sutherland, David and Ruttenberg, Alan and Schriml, Lynn M and Smith, Barry and Stoeckert Jr., Christian J and Vasilevsky, Nicole A and Walls, Ramona L and Zheng, Jie and Mungall, Christopher J and Peters, Bjoern},
+  title = "{OBO Foundry in 2021: operationalizing open data principles to evaluate ontologies}",
+  journal = {Database},
+  volume = {2021},
+  pages = {baab069},
+  year = {2021},
+  month = {10},
+  abstract = "{Biological ontologies are used to organize, curate and interpret the vast quantities of data arising from biological experiments. While this works well when using a single ontology, integrating multiple ontologies can be problematic, as they are developed independently, which can lead to incompatibilities. The Open Biological and Biomedical Ontologies (OBO) Foundry was created to address this by facilitating the development, harmonization, application and sharing of ontologies, guided by a set of overarching principles. One challenge in reaching these goals was that the OBO principles were not originally encoded in a precise fashion, and interpretation was subjective. Here, we show how we have addressed this by formally encoding the OBO principles as operational rules and implementing a suite of automated validation checks and a dashboard for objectively evaluating each ontology’s compliance with each principle. This entailed a substantial effort to curate metadata across all ontologies and to coordinate with individual stakeholders. We have applied these checks across the full OBO suite of ontologies, revealing areas where individual ontologies require changes to conform to our principles. Our work demonstrates how a sizable, federated community can be organized and evaluated on objective criteria that help improve overall quality and interoperability, which is vital for the sustenance of the OBO project and towards the overall goals of making data Findable, Accessible, Interoperable, and Reusable (FAIR).Database URL http://obofoundry.org/}",
+  issn = {1758-0463},
+  doi = {10.1093/database/baab069},
+  url = {https://doi.org/10.1093/database/baab069},
+  eprint = {https://academic.oup.com/database/article-pdf/doi/10.1093/database/baab069/40854912/baab069.pdf},
 }
 
-@article{gaia,
-    author = {{Gaia Collaboration}},
-    title = "{The Gaia mission}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1609.04153},
-    primaryClass = "astro-ph.IM",
-    keywords = {space vehicles: instruments, Galaxy: structure, astrometry, parallaxes, proper motions, telescopes},
-    year = 2016,
-    month = nov,
-    volume = 595,
-    doi = {10.1051/0004-6361/201629272},
-    url = {http://adsabs.harvard.edu/abs/2016A%26A...595A...1G},
+
+@article{fu_pubchemrdf_2015,
+	title = {{PubChemRDF}: towards the semantic annotation of {PubChem} compound and substance databases},
+	volume = {7},
+	issn = {1758-2946},
+	doi = {10.1186/s13321-015-0084-4},
+	shorttitle = {{PubChemRDF}},
+	abstract = {{BACKGROUND}: {PubChem} is an open repository for chemical structures, biological activities and biomedical annotations. Semantic Web technologies are emerging as an increasingly important approach to distribute and integrate scientific data. Exposing {PubChem} data to Semantic Web services may help enable automated data integration and management, as well as facilitate interoperable web applications.
+{DESCRIPTION}: This work, one of a series covering the {PubChemRDF} project, describes an approach to translate {PubChem} Substance and Compound information into Resource Description Framework ({RDF}) format. Basic examples are provided to demonstrate its use. The aim of this effort is to provide two new primary benefits to researchers in a cost-effective manner. Firstly, we aim to remove the inherent limitations of using the web-based resource {PubChem} by allowing a researcher to use readily available semantic technologies (namely, {RDF} triple stores and their corresponding {SPARQL} query engines) to query and analyze {PubChem} data on local computing resources. Secondly, this work intends to help improve data sharing, analysis, and integration of {PubChem} data to resources external to {NCBI} and across scientific domains, by means of the association of {PubChem} data to existing ontological frameworks, including {CHEMical} {INFormation} ontology, Semanticscience Integrated Ontology, and others.
+{CONCLUSIONS}: With the goal of semantically describing information available in the {PubChem} archive, pre-existing ontological frameworks were used, rather than creating new ones. Semantic relationships between compounds and substances, chemical descriptors associated with compounds and substances, interrelationships between chemicals, as well as provenance and attribute metadata of substances are described. Graphical abstract:Schematic representation of the semantic links for {PubChem} compounds and substances.},
+	pages = {34},
+	journaltitle = {Journal of Cheminformatics},
+	shortjournal = {J Cheminform},
+	author = {Fu, Gang and Batchelor, Colin and Dumontier, Michel and Hastings, Janna and Willighagen, Egon and Bolton, Evan},
+	date = {2015},
+	pmid = {26175801},
+	pmcid = {PMC4500850},
+	file = {Texte intégral:/home/ofilangi/Zotero/storage/6FQHLZYS/Fu et al. - 2015 - PubChemRDF towards the semantic annotation of Pub.pdf:application/pdf},
 }
 
-@article{astropy,
-    author = {{Astropy Collaboration}},
-    title = "{Astropy: A community Python package for astronomy}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1307.6212},
-    primaryClass = "astro-ph.IM",
-    keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
-    year = 2013,
-    month = oct,
-    volume = 558,
-    doi = {10.1051/0004-6361/201322068},
-    url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
-}
-
-@misc{fidgit,
-  author = {A. M. Smith and K. Thaney and M. Hahnel},
-  title = {Fidgit: An ungodly union of GitHub and Figshare},
-  year = {2020},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  url = {https://github.com/arfon/fidgit}
+@article{wilkinson_fair_2016,
+	title = {The {FAIR} Guiding Principles for scientific data management and stewardship},
+	volume = {3},
+	rights = {2016 The Author(s)},
+	issn = {2052-4463},
+	url = {https://www.nature.com/articles/sdata201618},
+	doi = {10.1038/sdata.2016.18},
+	abstract = {There is an urgent need to improve the infrastructure supporting the reuse of scholarly data. A diverse set of stakeholders—representing academia, industry, funding agencies, and scholarly publishers—have come together to design and jointly endorse a concise and measureable set of principles that we refer to as the {FAIR} Data Principles. The intent is that these may act as a guideline for those wishing to enhance the reusability of their data holdings. Distinct from peer initiatives that focus on the human scholar, the {FAIR} Principles put specific emphasis on enhancing the ability of machines to automatically find and use the data, in addition to supporting its reuse by individuals. This Comment is the first formal publication of the {FAIR} Principles, and includes the rationale behind them, and some exemplar implementations in the community.},
+	pages = {160018},
+	number = {1},
+	journaltitle = {Scientific Data},
+	shortjournal = {Sci Data},
+	author = {Wilkinson, Mark D. and Dumontier, Michel and Aalbersberg, {IJsbrand} Jan and Appleton, Gabrielle and Axton, Myles and Baak, Arie and Blomberg, Niklas and Boiten, Jan-Willem and da Silva Santos, Luiz Bonino and Bourne, Philip E. and Bouwman, Jildau and Brookes, Anthony J. and Clark, Tim and Crosas, Mercè and Dillo, Ingrid and Dumon, Olivier and Edmunds, Scott and Evelo, Chris T. and Finkers, Richard and Gonzalez-Beltran, Alejandra and Gray, Alasdair J. G. and Groth, Paul and Goble, Carole and Grethe, Jeffrey S. and Heringa, Jaap and ’t Hoen, Peter A. C. and Hooft, Rob and Kuhn, Tobias and Kok, Ruben and Kok, Joost and Lusher, Scott J. and Martone, Maryann E. and Mons, Albert and Packer, Abel L. and Persson, Bengt and Rocca-Serra, Philippe and Roos, Marco and van Schaik, Rene and Sansone, Susanna-Assunta and Schultes, Erik and Sengstag, Thierry and Slater, Ted and Strawn, George and Swertz, Morris A. and Thompson, Mark and van der Lei, Johan and van Mulligen, Erik and Velterop, Jan and Waagmeester, Andra and Wittenburg, Peter and Wolstencroft, Katherine and Zhao, Jun and Mons, Barend},
+	urldate = {2023-05-03},
+	date = {2016-03-15},
+	langid = {english},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	keywords = {Publication characteristics, Research data},
+	file = {Full Text PDF:/home/ofilangi/Zotero/storage/N7YN9H79/Wilkinson et al. - 2016 - The FAIR Guiding Principles for scientific data ma.pdf:application/pdf},
 }
