--- a/paper.bib
+++ b/paper.bib
@@ -54,6 +54,21 @@
 	file = {Full Text PDF:/home/ofilangi/Zotero/storage/XGZDK357/Delmas et al. - 2021 - FORUM building a Knowledge Graph from public data.pdf:application/pdf;Snapshot:/home/ofilangi/Zotero/storage/VEFPVVGC/6363786.html:text/html},
 }
 
+@article{delmas_forum_2023,
+    author = {Delmas, Maxime and Filangi, Olivier and Duperier, Christophe and Paulhe, Nils and Vinson, Florence and Rodriguez-Mier, Pablo and Giacomoni, Franck and Jourdan, Fabien and Frainay, Clément},
+    title = "{Suggesting disease associations for overlooked metabolites using literature from metabolic neighbors}",
+    journal = {GigaScience},
+    volume = {12},
+    pages = {giad065},
+    year = {2023},
+    month = {09},
+    abstract = "{In human health research, metabolic signatures extracted from metabolomics data have a strong added value for stratifying patients and identifying biomarkers. Nevertheless, one of the main challenges is to interpret and relate these lists of discriminant metabolites to pathological mechanisms. This task requires experts to combine their knowledge with information extracted from databases and the scientific literature. However, we show that most compounds (\\&gt;99\\%) in the PubChem database lack annotated literature. This dearth of available information can have a direct impact on the interpretation of metabolic signatures, which is often restricted to a subset of significant metabolites. To suggest potential pathological phenotypes related to overlooked metabolites that lack annotated literature, we extend the “guilt-by-association” principle to literature information by using a Bayesian framework. The underlying assumption is that the literature associated with the metabolic neighbors of a compound can provide valuable insights, or an a priori, into its biomedical context. The metabolic neighborhood of a compound can be defined from a metabolic network and correspond to metabolites to which it is connected through biochemical reactions. With the proposed approach, we suggest more than 35,000 associations between 1,047 overlooked metabolites and 3,288 diseases (or disease families). All these newly inferred associations are freely available on the FORUM ftp server (see information at https://github.com/eMetaboHUB/Forum-LiteraturePropagation).}",
+    issn = {2047-217X},
+    doi = {10.1093/gigascience/giad065},
+    url = {https://doi.org/10.1093/gigascience/giad065},
+    eprint = {https://academic.oup.com/gigascience/article-pdf/doi/10.1093/gigascience/giad065/51564334/giad065.pdf},
+}
+
 @article{BFO:2022,
 author = {Otte, J. Neil and Beverley, John and Ruttenberg, Alan and Borgo, Stefano and Galton, Antony and Kutz, Oliver},
 title = {BFO: Basic Formal Ontology1},
@@ -88,6 +103,65 @@ keywords = {BFO, top-level ontology, ontological analysis, formal ontology}
   doi = {10.1093/database/baab069},
   url = {https://doi.org/10.1093/database/baab069},
   eprint = {https://academic.oup.com/database/article-pdf/doi/10.1093/database/baab069/40854912/baab069.pdf},
+}
+
+@article{noy_bioportal_2009,
+	title = {{BioPortal}: ontologies and integrated data resources at the click of a mouse},
+	volume = {37},
+	issn = {1362-4962},
+	shorttitle = {{BioPortal}},
+	doi = {10.1093/nar/gkp440},
+	abstract = {Biomedical ontologies provide essential domain knowledge to drive data integration, information retrieval, data annotation, natural-language processing and decision support. BioPortal (http://bioportal.bioontology.org) is an open repository of biomedical ontologies that provides access via Web services and Web browsers to ontologies developed in OWL, RDF, OBO format and Protégé frames. BioPortal functionality includes the ability to browse, search and visualize ontologies. The Web interface also facilitates community-based participation in the evaluation and evolution of ontology content by providing features to add notes to ontology terms, mappings between terms and ontology reviews based on criteria such as usability, domain coverage, quality of content, and documentation and support. BioPortal also enables integrated search of biomedical data resources such as the Gene Expression Omnibus (GEO), ClinicalTrials.gov, and ArrayExpress, through the annotation and indexing of these resources with ontologies in BioPortal. Thus, BioPortal not only provides investigators, clinicians, and developers 'one-stop shopping' to programmatically access biomedical ontologies, but also provides support to integrate data from a variety of biomedical resources.},
+	language = {eng},
+	number = {Web Server issue},
+	journal = {Nucleic Acids Research},
+	author = {Noy, Natalya F. and Shah, Nigam H. and Whetzel, Patricia L. and Dai, Benjamin and Dorf, Michael and Griffith, Nicholas and Jonquet, Clement and Rubin, Daniel L. and Storey, Margaret-Anne and Chute, Christopher G. and Musen, Mark A.},
+	month = jul,
+	year = {2009},
+	pmid = {19483092},
+	pmcid = {PMC2703982},
+	keywords = {Abstracting and Indexing, Biomedical Research, Internet, Natural Language Processing, Software, Systems Integration, User-Computer Interface, Vocabulary, Controlled},
+	pages = {W170--173},
+	file = {Texte intégral:/home/ofilangi/snap/zotero-snap/common/Zotero/storage/5N5NKKHT/Noy et al. - 2009 - BioPortal ontologies and integrated data resource.pdf:application/pdf},
+}
+
+@article{jonquet_agroportal_2018,
+	title = {{AgroPortal}: a vocabulary and ontology repository for agronomy},
+	issn = {0168-1699},
+	shorttitle = {{AgroPortal}},
+	url = {https://cgspace.cgiar.org/handle/10568/89904},
+	doi = {10.1016/j.compag.2017.10.012},
+	abstract = {Many vocabularies and ontologies are produced to represent and annotate agronomic data. However, those ontologies are spread out, in different formats, of different size, with different structures and from overlapping domains. Therefore, there is need for a common platform to receive and host them, align them, and enabling their use in agro-informatics applications. By reusing the National Center for Biomedical Ontologies (NCBO) BioPortal technology, we have designed AgroPortal, an ontology repository for the agronomy domain. The AgroPortal project re-uses the biomedical domain’s semantic tools and insights to serve agronomy, but also food, plant, and biodiversity sciences. We offer a portal that features ontology hosting, search, versioning, visualization, comment, and recommendation; enables semantic annotation; stores and exploits ontology alignments; and enables interoperation with the semantic web. The AgroPortal specifically satisfies requirements of the agronomy community in terms of ontology formats (e.g., SKOS vocabularies and trait dictionaries) and supported features (offering detailed metadata and advanced annotation capabilities). In this paper, we present our platform’s content and features, including the additions to the original technology, as well as preliminary outputs of five driving agronomic use cases that participated in the design and orientation of the project to anchor it in the community. By building on the experience and existing technology acquired from the biomedical domain, we can present in AgroPortal a robust and feature-rich repository of great value for the agronomic domain. 
+Keywords},
+	language = {en},
+	urldate = {2023-04-27},
+	journal = {Computers and Electronics in Agriculture},
+	author = {Jonquet, C. and Toulet, A. and Arnaud, Elizabeth and Aubin, S. and Dzale-Yeumo, E. and Emonet, V. and Graybeal, J. and Laporte, Marie-Angélique and Musen, M. A. and Pesce, V. and Larmande, Pierre},
+	month = jan,
+	year = {2018},
+	note = {Accepted: 2017-12-31T15:47:20Z
+Publisher: Elsevier BV},
+	file = {Full Text PDF:/home/ofilangi/snap/zotero-snap/common/Zotero/storage/93R5AS9I/Jonquet et al. - 2018 - AgroPortal a vocabulary and ontology repository f.pdf:application/pdf},
+}
+
+@article{cote_ontology_2006,
+	title = {The {Ontology} {Lookup} {Service}, a lightweight cross-platform tool for controlled vocabulary queries},
+	volume = {7},
+	issn = {1471-2105},
+	doi = {10.1186/1471-2105-7-97},
+	abstract = {BACKGROUND: With the vast amounts of biomedical data being generated by high-throughput analysis methods, controlled vocabularies and ontologies are becoming increasingly important to annotate units of information for ease of search and retrieval. Each scientific community tends to create its own locally available ontology. The interfaces to query these ontologies tend to vary from group to group. We saw the need for a centralized location to perform controlled vocabulary queries that would offer both a lightweight web-accessible user interface as well as a consistent, unified SOAP interface for automated queries.
+RESULTS: The Ontology Lookup Service (OLS) was created to integrate publicly available biomedical ontologies into a single database. All modified ontologies are updated daily. A list of currently loaded ontologies is available online. The database can be queried to obtain information on a single term or to browse a complete ontology using AJAX. Auto-completion provides a user-friendly search mechanism. An AJAX-based ontology viewer is available to browse a complete ontology or subsets of it. A programmatic interface is available to query the webservice using SOAP. The service is described by a WSDL descriptor file available online. A sample Java client to connect to the webservice using SOAP is available for download from SourceForge. All OLS source code is publicly available under the open source Apache Licence.
+CONCLUSION: The OLS provides a user-friendly single entry point for publicly available ontologies in the Open Biomedical Ontology (OBO) format. It can be accessed interactively or programmatically at http://www.ebi.ac.uk/ontology-lookup/.},
+	language = {eng},
+	journal = {BMC bioinformatics},
+	author = {Côté, Richard G. and Jones, Philip and Apweiler, Rolf and Hermjakob, Henning},
+	month = feb,
+	year = {2006},
+	pmid = {16507094},
+	pmcid = {PMC1420335},
+	keywords = {Database Management Systems, Databases, Factual, Information Storage and Retrieval, Natural Language Processing, Programming Languages, Software, User-Computer Interface, Vocabulary, Controlled},
+	pages = {97},
+	file = {Texte intégral:/home/ofilangi/snap/zotero-snap/common/Zotero/storage/73C3Q54G/Côté et al. - 2006 - The Ontology Lookup Service, a lightweight cross-p.pdf:application/pdf},
 }
 
 
