--- a/paper.bib
+++ b/paper.bib
@@ -205,3 +205,12 @@ Publisher: Nature Publishing Group},
 	keywords = {Publication characteristics, Research data},
 	file = {Full Text PDF:/home/ofilangi/Zotero/storage/N7YN9H79/Wilkinson et al. - 2016 - The FAIR Guiding Principles for scientific data ma.pdf:application/pdf},
 }
+
+@inproceedings{taelman_iswc_resources_comunica_2018,
+  author    = {Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
+  title     = {Comunica: a Modular SPARQL Query Engine for the Web},
+  booktitle = {Proceedings of the 17th International Semantic Web Conference},
+  year      = {2018},
+  month     = oct,
+  url       = {https://comunica.github.io/Article-ISWC2018-Resource/}
+}
